# netlify-rust

./: netlify.toml  package-lock.json  package.json
netlify/functions/hello/: Cargo.toml
netlify/functions/hello/src/: main.rs
