[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.4.0"
http = "0.2.4"
lambda_runtime = "0.3.0"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = "1.6.1"
image = "0.23.14"
base64 = "0.13.0"
reqwest = { version = "0.11.7", features = [ "json" ]}
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3.18"
